<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="new_expense">New Expense</string>
    <string name="settings">Settings</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add">Add</string>
    <string name="leisure">Leisure</string>
    <string name="other">Other</string>
    <string name="health">Health</string>
    <string name="grocery">Grocery</string>
    <string name="shopping">Shopping</string>
    <string name="food">Food</string>
    <string name="_0">0</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string-array name="new_expense_type_array" >
        <item> Expense Type</item>
        <item> One time</item>
        <item> Recurring</item>
    </string-array>
</resources>