<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <Button
        android:id="@+id/add_button"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/add"
        app:backgroundTint="#2962FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type_radio_group" />

    <TextView
        android:id="@+id/amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_amount_text" />

    <ImageView
        android:id="@+id/dollar_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_us_dollar_24"
        app:layout_constraintBottom_toBottomOf="@+id/expense_amount_text"
        app:layout_constraintEnd_toEndOf="@+id/expense_amount_text"
        app:layout_constraintTop_toBottomOf="@+id/amount_text" />

    <EditText
        android:id="@+id/expense_amount_text"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_text" />

    <RadioGroup
        android:id="@+id/expense_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_text">

        <RadioButton
            android:id="@+id/grocery_button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:button="@drawable/icons8_shopping_cart_64"
            android:checked="true"
            android:paddingLeft="25dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/grocery"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/shopping_button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:button="@drawable/icons8_t_shirt_64"
            android:paddingLeft="25dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/shopping"
            android:textSize="36sp" />


        <RadioButton
            android:id="@+id/leisure_button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:button="@drawable/icons8_game_controller_64__1_"
            android:paddingLeft="25dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/leisure"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/food_button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:button="@drawable/icons8_dining_room_64__1_"
            android:paddingLeft="25dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/food"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/health_button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:button="@drawable/icons8_barbell_64"
            android:paddingLeft="25dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/health"
            android:textSize="36sp" />

        <RadioButton
            android:id="@+id/other_button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:button="@drawable/icons8_home_64"
            android:paddingLeft="25dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:text="@string/other"
            android:textSize="36sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>